src/objects/DP_CustomObject__c.object
<CustomObject>
    <fields>
        <fullName>Field_Without_Type__c</fullName>
        <label>Field_Without_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumericWithDecimal__c</fullName>
        <label>NumericWithDecimal</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumericWithoutDecimal__c</fullName>
        <label>NumericWithoutDecimal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DP_CustomObjects</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RelationShipToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DP_CustomObjects</relationshipLabel>
        <relationshipName>DP_CustomObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DP_CustomObject</label>
    <nameField>
        <label>DP_CustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DP_CustomObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>